slider handle going out of bound fixed

--- a/public/stylesheets/control-panel.css
+++ b/public/stylesheets/control-panel.css
@@ -123,13 +123,14 @@
 }
 
 #volume-slider .ui-slider-handle {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
+    width: 16px;
+    height: 16px;
+    border-radius: 16px;
     background: rgb(44, 212, 100);
     position: absolute;
     cursor: pointer;
     outline: none;
+    margin-left: -8px;
 }
 
 .seekbar-controller {
@@ -187,6 +188,7 @@
     cursor: pointer;
     outline: none;
     position: absolute;
+    margin-left: -6px;
 }
 
 .control-panel-tooltip {
@@ -198,19 +200,19 @@
     transition: none;
 }
 
-.current-song-details {
+.current-audio-details {
     width: 400px;
     margin-left: 40px;
 }
 
-.current-song-details #name {
+.current-audio-details #name {
     font-size: 12px;
     font-weight: bold;
     width: 100%;
     height: 100%;
 }
 
-.current-song-details #creator {
+.current-audio-details #creator {
     font-size: 10px;
     height: 100%;
     width: 100%;
